[gd_scene load_steps=13 format=4 uid="uid://bu22kyd3cdajg"]

[ext_resource type="Script" path="res://scenes/level/apartment/area/3_apt_2_jelly.gd" id="1_ild27"]
[ext_resource type="TileSet" uid="uid://dki5y3qh21w82" path="res://resources/physics.tres" id="2_4g55n"]
[ext_resource type="TileSet" uid="uid://bkmf23vdlno3h" path="res://resources/level/apartment/inside.tres" id="3_3ymdg"]
[ext_resource type="PackedScene" uid="uid://y7emk8leigvp" path="res://scenes/level/apartment/object/doors/door.tscn" id="4_su487"]
[ext_resource type="PackedScene" uid="uid://ch8jsclq6p2mb" path="res://scenes/level/apartment/object/doors/area_door.tscn" id="5_vxrun"]
[ext_resource type="TileSet" uid="uid://ixn5gvkvawsq" path="res://resources/level/apartment/decals.tres" id="6_odd2a"]
[ext_resource type="PackedScene" uid="uid://64fb5yqa5qdv" path="res://scenes/level/apartment/object/wall/painting_lumi.tscn" id="7_es7tk"]
[ext_resource type="TileSet" uid="uid://crvvyqw5dhqu1" path="res://resources/level/apartment/objects.tres" id="8_twgeh"]
[ext_resource type="PackedScene" uid="uid://csqebeabgie55" path="res://scenes/level/apartment/object/fridge.tscn" id="9_mjjfr"]
[ext_resource type="PackedScene" uid="uid://dh0qldhha01sw" path="res://scenes/level/apartment/object/bed.tscn" id="10_wa6hh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qnr1r"]
size = Vector2(160, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r3rtj"]
size = Vector2(72, 8)

[node name="3Apt2Jelly" type="Node2D"]
script = ExtResource("1_ild27")

[node name="Physics" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAP7/AAAAAAEAAAABAP3/AAACAAAAAAABAPz/AAACAAAAAAACAP7/AAABAAAAAAADAP7/AAABAAAAAAAEAP7/AAABAAAAAAAFAP7/AAABAAAAAAAGAP7/AAABAAAAAAAHAP7/AAABAAAAAAAIAP7/AAABAAAAAAAJAP7/AAABAAAAAAAKAP7/AAABAAAAAAALAP7/AAABAAAAAAAMAP7/AAABAAAAAAANAP7/AAABAAAAAAAOAP7/AAABAAAAAAAPAP7/AAABAAAAAAAQAP7/AAABAAAAAAARAP7/AAABAAAAAAASAP7/AAABAAAAAAATAP7/AAABAAAAAAAUAP7/AAABAAAAAAAVAP7/AAABAAAAAAAWAP7/AAABAAAAAAAXAP7/AAABAAAAAAAYAP7/AAABAAAAAAAZAP7/AAABAAAAAAAaAP7/AAABAAAAAAAbAP7/AAABAAAAAAAcAP7/AAABAAAAAAAdAP7/AAABAAAAAAAeAP7/AAABAAAAAAAfAP7/AAABAAAAAAAgAP7/AAABAAAAAAAhAP7/AAABAAAAAAAiAP7/AAABAAAAAAAjAP7/AAABAAAAAAAkAP7/AAABAAAAAAAlAP7/AAABAAAAAAAmAP7/AAABAAAAAAAnAP7/AAABAAAAAAAoAP7/AAABAAAAAAApAP7/AAABAAAAAAAqAP7/AAABAAAAAAArAP7/AAABAAAAAAAsAP7/AAABAAAAAAAtAP7/AAABAAAAAAAuAP7/AAABAAAAAAAvAP7/AAABAAAAAAAwAP7/AAABAAAAAAAxAP7/AAABAAAAAAAyAP7/AAABAAAAAAAzAP7/AAABAAAAAAA0AP7/AAABAAAAAAA1AP7/AAABAAAAAAA2AP7/AAABAAAAAAA3AP7/AAABAAAAAAA4AP7/AAABAAAAAAA5AP7/AAABAAAAAAA6AP7/AAABAAAAAAA7AP7/AAABAAAAAAA8AP7/AAABAAAAAAA9AP7/AAABAAAAAAA+AP7/AAABAAAAAAA/AP7/AAABAAAAAABAAP7/AAABAAAAAABBAP7/AAABAAAAAABCAP7/AAABAAAAAABDAP7/AAABAAAAAABEAP7/AAABAAAAAABFAP7/AAABAAAAAABGAP7/AAABAAEAAABGAP3/AAACAAAAAABGAPz/AAACAAAAAABGAPv/AAACAAAAAABGAPr/AAACAAAAAABGAPn/AAACAAAAAABGAPj/AAACAAAAAABGAPP/AAADAAIAAABGAPf/AAACAAAAAABGAPX/AAACAAAAAABGAPb/AAACAAAAAABGAPT/AAACAAAAAABFAPP/AAADAAAAAABEAPP/AAADAAAAAABDAPP/AAADAAAAAABCAPP/AAADAAAAAABBAPP/AAADAAAAAABAAPP/AAADAAAAAAA/APP/AAADAAAAAAA+APP/AAADAAAAAAA9APP/AAADAAAAAAA8APP/AAADAAAAAAA7APP/AAADAAAAAAA6APP/AAADAAAAAAA5APP/AAADAAAAAAA4APP/AAADAAAAAAA3APP/AAADAAAAAAA2APP/AAADAAAAAAA1APP/AAADAAAAAAA0APP/AAADAAAAAAAzAPP/AAADAAAAAAAyAPP/AAADAAAAAAAxAPP/AAADAAAAAAAwAPP/AAADAAAAAAAvAPP/AAADAAAAAAAuAPP/AAADAAAAAAAtAPP/AAADAAAAAAAsAPP/AAADAAAAAAArAPP/AAADAAAAAAAqAPP/AAADAAAAAAApAPP/AAADAAAAAAAoAPP/AAADAAAAAAAnAPP/AAADAAAAAAAmAPP/AAADAAAAAAAlAPP/AAADAAAAAAAkAPP/AAADAAAAAAAjAPP/AAADAAAAAAAiAPP/AAADAAAAAAAhAPP/AAADAAAAAAAgAPP/AAADAAAAAAAfAPP/AAADAAAAAAAeAPP/AAADAAAAAAAdAPP/AAADAAAAAAAcAPP/AAADAAAAAAAbAPP/AAADAAAAAAAaAPP/AAADAAAAAAAZAPP/AAADAAAAAAAYAPP/AAADAAAAAAAXAPP/AAADAAAAAAAWAPP/AAADAAAAAAAVAPP/AAADAAAAAAAUAPP/AAADAAAAAAATAPP/AAADAAAAAAASAPP/AAADAAAAAAARAPP/AAADAAAAAAAQAPP/AAADAAAAAAAPAPP/AAADAAAAAAAOAPP/AAADAAAAAAANAPP/AAADAAAAAAAMAPP/AAADAAAAAAALAPP/AAADAAAAAAAKAPP/AAADAAAAAAAJAPP/AAADAAAAAAAIAPP/AAADAAAAAAAHAPP/AAADAAAAAAAGAPP/AAADAAAAAAAFAPP/AAADAAAAAAAEAPP/AAADAAAAAAADAPP/AAADAAAAAAACAPP/AAADAAAAAAABAPP/AAACAAIAAAABAPT/AAACAAAAAAABAPX/AAACAAAAAAABAPb/AAACAAAAAAABAPf/AAACAAAAAAABAPj/AAACAAAAAAABAPn/AAACAAAAAAABAPr/AAACAAAAAAABAPv/AAACAAAAAAAkAPT/AAACAAIAAAAlAPT/AAADAAIAAAAkAPX/AAACAAAAAAAlAPX/AAACAAAAAAAkAPb/AAACAAAAAAAlAPb/AAACAAAAAAAlAPf/AAADAAEAAAAkAPf/AAACAAEAAAAAAP//AAAAAAAAAAAAAPL/AAAAAAAAAAAAAPP/AAAAAAAAAAAAAPT/AAAAAAAAAAAAAPX/AAAAAAAAAAAAAPb/AAAAAAAAAAAAAPf/AAAAAAAAAAAAAPj/AAAAAAAAAAAAAPn/AAAAAAAAAAAAAPr/AAAAAAAAAAAAAPv/AAAAAAAAAAAAAPz/AAAAAAAAAAAAAP3/AAAAAAAAAAAAAP7/AAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAADAP//AAAAAAAAAAAEAP//AAAAAAAAAAAFAP//AAAAAAAAAAAGAP//AAAAAAAAAAAHAP//AAAAAAAAAAAIAP//AAAAAAAAAAAJAP//AAAAAAAAAAAKAP//AAAAAAAAAAALAP//AAAAAAAAAAAMAP//AAAAAAAAAAANAP//AAAAAAAAAAAOAP//AAAAAAAAAAAPAP//AAAAAAAAAAAQAP//AAAAAAAAAAARAP//AAAAAAAAAAASAP//AAAAAAAAAAATAP//AAAAAAAAAAAUAP//AAAAAAAAAAAVAP//AAAAAAAAAAAWAP//AAAAAAAAAAAXAP//AAAAAAAAAAAYAP//AAAAAAAAAAAZAP//AAAAAAAAAAAaAP//AAAAAAAAAAAbAP//AAAAAAAAAAAcAP//AAAAAAAAAAAdAP//AAAAAAAAAAAeAP//AAAAAAAAAAAfAP//AAAAAAAAAAAgAP//AAAAAAAAAAAhAP//AAAAAAAAAAAiAP//AAAAAAAAAAAjAP//AAAAAAAAAAAkAP//AAAAAAAAAAAlAP//AAAAAAAAAAAmAP//AAAAAAAAAAAnAP//AAAAAAAAAAAoAP//AAAAAAAAAAApAP//AAAAAAAAAAAqAP//AAAAAAAAAAArAP//AAAAAAAAAAAsAP//AAAAAAAAAAAtAP//AAAAAAAAAAAuAP//AAAAAAAAAAAvAP//AAAAAAAAAAAwAP//AAAAAAAAAAAxAP//AAAAAAAAAAAyAP//AAAAAAAAAAAzAP//AAAAAAAAAAA0AP//AAAAAAAAAAA1AP//AAAAAAAAAAA2AP//AAAAAAAAAAA3AP//AAAAAAAAAAA4AP//AAAAAAAAAAA5AP//AAAAAAAAAAA6AP//AAAAAAAAAAA7AP//AAAAAAAAAAA8AP//AAAAAAAAAAA9AP//AAAAAAAAAAA+AP//AAAAAAAAAAA/AP//AAAAAAAAAABAAP//AAAAAAAAAABBAP//AAAAAAAAAABCAP//AAAAAAAAAABDAP//AAAAAAAAAABEAP//AAAAAAAAAABFAP//AAAAAAAAAABGAP//AAAAAAAAAABHAP//AAAAAAAAAABHAP7/AAAAAAAAAABHAP3/AAAAAAAAAABHAPz/AAAAAAAAAABHAPv/AAAAAAAAAABHAPr/AAAAAAAAAABHAPn/AAAAAAAAAABHAPj/AAAAAAAAAABHAPf/AAAAAAAAAABHAPb/AAAAAAAAAABHAPX/AAAAAAAAAABHAPT/AAAAAAAAAABHAPP/AAAAAAAAAABHAPL/AAAAAAAAAABGAPL/AAAAAAAAAABFAPL/AAAAAAAAAABEAPL/AAAAAAAAAABDAPL/AAAAAAAAAABCAPL/AAAAAAAAAABBAPL/AAAAAAAAAABAAPL/AAAAAAAAAAA/APL/AAAAAAAAAAA+APL/AAAAAAAAAAA9APL/AAAAAAAAAAA8APL/AAAAAAAAAAA7APL/AAAAAAAAAAA6APL/AAAAAAAAAAA5APL/AAAAAAAAAAA4APL/AAAAAAAAAAA3APL/AAAAAAAAAAA2APL/AAAAAAAAAAA1APL/AAAAAAAAAAA0APL/AAAAAAAAAAAzAPL/AAAAAAAAAAAyAPL/AAAAAAAAAAAxAPL/AAAAAAAAAAAwAPL/AAAAAAAAAAAvAPL/AAAAAAAAAAAuAPL/AAAAAAAAAAAtAPL/AAAAAAAAAAAsAPL/AAAAAAAAAAArAPL/AAAAAAAAAAAqAPL/AAAAAAAAAAApAPL/AAAAAAAAAAAoAPL/AAAAAAAAAAAnAPL/AAAAAAAAAAAmAPL/AAAAAAAAAAAlAPL/AAAAAAAAAAAkAPL/AAAAAAAAAAAjAPL/AAAAAAAAAAAiAPL/AAAAAAAAAAAhAPL/AAAAAAAAAAAgAPL/AAAAAAAAAAAfAPL/AAAAAAAAAAAeAPL/AAAAAAAAAAAdAPL/AAAAAAAAAAAcAPL/AAAAAAAAAAAbAPL/AAAAAAAAAAAaAPL/AAAAAAAAAAAZAPL/AAAAAAAAAAAYAPL/AAAAAAAAAAAXAPL/AAAAAAAAAAAWAPL/AAAAAAAAAAAVAPL/AAAAAAAAAAAUAPL/AAAAAAAAAAATAPL/AAAAAAAAAAASAPL/AAAAAAAAAAARAPL/AAAAAAAAAAAQAPL/AAAAAAAAAAAPAPL/AAAAAAAAAAAOAPL/AAAAAAAAAAANAPL/AAAAAAAAAAAMAPL/AAAAAAAAAAALAPL/AAAAAAAAAAAKAPL/AAAAAAAAAAAJAPL/AAAAAAAAAAAIAPL/AAAAAAAAAAAHAPL/AAAAAAAAAAAGAPL/AAAAAAAAAAAFAPL/AAAAAAAAAAAEAPL/AAAAAAAAAAADAPL/AAAAAAAAAAACAPL/AAAAAAAAAAABAPL/AAAAAAAAAAA=")
tile_set = ExtResource("2_4g55n")

[node name="Inside" type="TileMapLayer" parent="."]
z_index = 6
z_as_relative = false
tile_map_data = PackedByteArray("AAAAAP//AAAAAAIAAAABAP//AAABAAIAAAACAP//AAABAAIAAAADAP//AAABAAIAAAAEAP//AAABAAIAAAAFAP//AAABAAIAAAAGAP//AAABAAIAAAAHAP//AAABAAIAAAAIAP//AAABAAIAAAAJAP//AAABAAIAAAAKAP//AAABAAIAAAALAP//AAABAAIAAAAMAP//AAABAAIAAAANAP//AAABAAIAAAAOAP//AAABAAIAAAAPAP//AAABAAIAAAAQAP//AAABAAIAAAARAP//AAABAAIAAAASAP//AAABAAIAAAATAP//AAABAAIAAAAUAP//AAABAAIAAAAVAP//AAABAAIAAAAWAP//AAABAAIAAAAXAP//AAABAAIAAAAYAP//AAABAAIAAAAZAP//AAABAAIAAAAaAP//AAABAAIAAAAbAP//AAABAAIAAAAcAP//AAABAAIAAAAdAP//AAABAAIAAAAeAP//AAABAAIAAAAfAP//AAABAAIAAAAgAP//AAABAAIAAAAhAP//AAABAAIAAAAiAP//AAABAAIAAAAjAP//AAACAAIAAAAjAP7/AAACAAEAAAAjAP3/AAACAAEAAAAjAPz/AAACAAEAAAAjAPv/AAACAAEAAAAjAPr/AAACAAEAAAAjAPn/AAACAAAAAAAAAPn/AAAAAAAAAAAAAPr/AAAAAAEAAAAAAPv/AAAAAAEAAAAAAPz/AAAAAAEAAAAAAP3/AAAAAAEAAAAAAP7/AAAAAAEAAAABAPr/AAABAAEAAAACAPr/AAABAAEAAAADAPr/AAABAAEAAAAEAPr/AAABAAEAAAAFAPr/AAABAAEAAAAGAPr/AAABAAEAAAAHAPr/AAABAAEAAAAIAPr/AAABAAEAAAAJAPr/AAABAAEAAAAKAPr/AAABAAEAAAALAPr/AAABAAEAAAAMAPr/AAABAAEAAAANAPr/AAABAAEAAAAOAPr/AAABAAEAAAAPAPr/AAABAAEAAAAQAPr/AAABAAEAAAARAPr/AAABAAEAAAABAPv/AAABAAEAAAABAPz/AAABAAEAAAABAP3/AAABAAEAAAABAP7/AAABAAEAAAACAPv/AAABAAEAAAACAPz/AAABAAEAAAACAP3/AAABAAEAAAACAP7/AAABAAEAAAADAPv/AAABAAEAAAADAPz/AAABAAEAAAADAP3/AAABAAEAAAADAP7/AAABAAEAAAAEAPv/AAABAAEAAAAEAPz/AAABAAEAAAAEAP3/AAABAAEAAAAEAP7/AAABAAEAAAAFAPv/AAABAAEAAAAFAPz/AAABAAEAAAAFAP3/AAABAAEAAAAFAP7/AAABAAEAAAAGAPv/AAABAAEAAAAGAPz/AAABAAEAAAAGAP3/AAABAAEAAAAGAP7/AAABAAEAAAAHAPv/AAABAAEAAAAHAPz/AAABAAEAAAAHAP3/AAABAAEAAAAHAP7/AAABAAEAAAAIAPv/AAABAAEAAAAIAPz/AAABAAEAAAAIAP3/AAABAAEAAAAIAP7/AAABAAEAAAAJAPv/AAABAAEAAAAJAPz/AAABAAEAAAAJAP3/AAABAAEAAAAJAP7/AAABAAEAAAAKAPv/AAABAAEAAAAKAPz/AAABAAEAAAAKAP3/AAABAAEAAAAKAP7/AAABAAEAAAALAPv/AAABAAEAAAALAPz/AAABAAEAAAALAP3/AAABAAEAAAALAP7/AAABAAEAAAAMAPv/AAABAAEAAAAMAPz/AAABAAEAAAAMAP3/AAABAAEAAAAMAP7/AAABAAEAAAANAPv/AAABAAEAAAANAPz/AAABAAEAAAANAP3/AAABAAEAAAANAP7/AAABAAEAAAAOAPv/AAABAAEAAAAOAPz/AAABAAEAAAAOAP3/AAABAAEAAAAOAP7/AAABAAEAAAAPAPv/AAABAAEAAAAPAPz/AAABAAEAAAAPAP3/AAABAAEAAAAPAP7/AAABAAEAAAAQAPv/AAABAAEAAAAQAPz/AAABAAEAAAAQAP3/AAABAAEAAAAQAP7/AAABAAEAAAARAPv/AAABAAEAAAARAPz/AAABAAEAAAARAP3/AAABAAEAAAARAP7/AAABAAEAAAASAPz/AAABAAEAAAASAP3/AAABAAEAAAASAP7/AAABAAEAAAATAPr/AAABAAEAAAATAPv/AAABAAEAAAATAPz/AAABAAEAAAATAP3/AAABAAEAAAATAP7/AAABAAEAAAAUAPr/AAABAAEAAAAUAPv/AAABAAEAAAAUAPz/AAABAAEAAAAUAP3/AAABAAEAAAAUAP7/AAABAAEAAAAVAPr/AAABAAEAAAAVAPv/AAABAAEAAAAVAPz/AAABAAEAAAAVAP3/AAABAAEAAAAVAP7/AAABAAEAAAAWAPr/AAABAAEAAAAWAPv/AAAEAAAAAAAWAPz/AAAFAAAAAAAWAP3/AAAFAAAAAAAWAP7/AAAFAAAAAAAXAPr/AAABAAEAAAAXAPv/AAAEAAAAAAAXAPz/AAAFAAAAAAAXAP3/AAAFAAAAAAAXAP7/AAAFAAAAAAAYAPr/AAABAAEAAAAYAPv/AAABAAEAAAAYAPz/AAABAAEAAAAYAP3/AAABAAEAAAAYAP7/AAABAAEAAAAZAPr/AAABAAEAAAAZAPv/AAABAAEAAAAZAPz/AAABAAEAAAAZAP3/AAABAAEAAAAZAP7/AAABAAEAAAAaAPr/AAABAAEAAAAaAPv/AAABAAEAAAAaAPz/AAABAAEAAAAaAP3/AAABAAEAAAAaAP7/AAABAAEAAAAbAPr/AAABAAEAAAAbAPv/AAABAAEAAAAbAPz/AAABAAEAAAAbAP3/AAABAAEAAAAbAP7/AAABAAEAAAAcAPr/AAABAAEAAAAcAPv/AAABAAEAAAAcAPz/AAABAAEAAAAcAP3/AAABAAEAAAAcAP7/AAABAAEAAAAdAPr/AAABAAEAAAAdAPv/AAABAAEAAAAdAPz/AAABAAEAAAAdAP3/AAABAAEAAAAdAP7/AAABAAEAAAAeAPr/AAABAAEAAAAeAPv/AAABAAEAAAAeAPz/AAABAAEAAAAeAP3/AAABAAEAAAAeAP7/AAABAAEAAAAfAPr/AAABAAEAAAAfAPv/AAABAAEAAAAfAPz/AAABAAEAAAAfAP3/AAABAAEAAAAfAP7/AAABAAEAAAAgAPr/AAABAAEAAAAgAPv/AAABAAEAAAAgAPz/AAABAAEAAAAgAP3/AAABAAEAAAAgAP7/AAABAAEAAAAhAPr/AAABAAEAAAAhAPv/AAABAAEAAAAhAPz/AAABAAEAAAAhAP3/AAABAAEAAAAhAP7/AAABAAEAAAAiAPr/AAABAAEAAAAiAPv/AAABAAEAAAAiAPz/AAABAAEAAAAiAP3/AAABAAEAAAAiAP7/AAABAAEAAAASAPv/AAADAAIAAAASAPn/AAADAAAAAAASAPr/AAADAAEAAAABAPn/AAABAAAAAAACAPn/AAABAAAAAAADAPn/AAABAAAAAAAEAPn/AAABAAAAAAAFAPn/AAABAAAAAAAGAPn/AAABAAAAAAAHAPn/AAABAAAAAAAIAPn/AAABAAAAAAAJAPn/AAABAAAAAAAKAPn/AAABAAAAAAALAPn/AAABAAAAAAAMAPn/AAABAAAAAAANAPn/AAABAAAAAAAOAPn/AAABAAAAAAAPAPn/AAABAAAAAAAQAPn/AAABAAAAAAARAPn/AAABAAAAAAATAPn/AAABAAAAAAAUAPn/AAABAAAAAAAVAPn/AAABAAAAAAAWAPn/AAABAAAAAAAXAPn/AAABAAAAAAAYAPn/AAABAAAAAAAZAPn/AAABAAAAAAAaAPn/AAABAAAAAAAbAPn/AAABAAAAAAAcAPn/AAABAAAAAAAdAPn/AAABAAAAAAAeAPn/AAABAAAAAAAfAPn/AAABAAAAAAAgAPn/AAABAAAAAAAhAPn/AAABAAAAAAAiAPn/AAABAAAAAAA=")
tile_set = ExtResource("3_3ymdg")

[node name="Door" parent="." instance=ExtResource("4_su487")]
z_index = 6
z_as_relative = false
position = Vector2(544, -32)

[node name="AreaDoor" parent="." instance=ExtResource("5_vxrun")]
z_index = 6
z_as_relative = false
position = Vector2(704, -31)
door_alias = &"3_apt_2_3_hallway_exit"

[node name="Decals" type="TileMapLayer" parent="."]
z_index = 6
z_as_relative = false
tile_set = ExtResource("6_odd2a")

[node name="PaintingLumi" parent="." instance=ExtResource("7_es7tk")]
z_index = 6
z_as_relative = false
position = Vector2(368, -172)

[node name="Objects" type="TileMapLayer" parent="."]
z_index = 6
z_as_relative = false
tile_map_data = PackedByteArray("AAAJAP7/AAAEAAIAAAAZAP3/AAAEAAAAAAAZAP7/AAAEAAEAAAAdAP3/AAAEAAAAAAAdAP7/AAAEAAEAAAAiAP7/AAADAAMAAAAaAP3/AAAAAAYAAAAaAP7/AAAAAAcAAAAbAP3/AAABAAYAAAAcAP3/AAACAAYAAAAcAP7/AAACAAcAAAA=")
tile_set = ExtResource("8_twgeh")

[node name="Fridge" parent="." instance=ExtResource("9_mjjfr")]
z_index = 6
z_as_relative = false
position = Vector2(992, -32)

[node name="Bed" parent="." instance=ExtResource("10_wa6hh")]
z_index = 6
z_as_relative = false
position = Vector2(32, -32)

[node name="Area2DTalk" type="Area2D" parent="."]
z_index = 30
z_as_relative = false
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DTalk"]
position = Vector2(80, -80)
shape = SubResource("RectangleShape2D_qnr1r")

[node name="Area2DWife" type="Area2D" parent="."]
z_index = 6
z_as_relative = false
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DWife"]
position = Vector2(416, -36.25)
shape = SubResource("RectangleShape2D_r3rtj")

[connection signal="fridge_closed" from="Fridge" to="." method="_on_fridge_fridge_closed"]
[connection signal="fridge_opened" from="Fridge" to="." method="_on_fridge_fridge_opened"]
[connection signal="body_entered" from="Area2DTalk" to="." method="_on_area_2d_talk_body_entered"]
[connection signal="body_entered" from="Area2DWife" to="." method="_on_area_2d_wife_body_entered"]
[connection signal="body_exited" from="Area2DWife" to="." method="_on_area_2d_wife_body_exited"]
